--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+        <!-- SASS Bootstrap -->
+        <link rel="stylesheet" href="/css/styles.css">
+
     </head>
     <body>
 
