tech, write, 100 indiv. pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
                 <p>
                   Russell Matney<br />
                   Software and Fiction Engineer<br />
-                  russell.matney@gmail.com
+                  <!-- russell.matney@gmail.com -->
                 </p>
               </div>
               <div class="contact">
