got the demo working with some ugly routing

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,7 @@ ul.posts span {
   font-size: 115%;
   text-align: justify;
   width: 42em;
+  max-width: 100%;
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
