--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
           <div class="site">
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
+              <a class="extra" href="/">software and fiction engineer</a>
             </div>
 
                 {{ content }}
@@ -28,8 +28,7 @@
               <div class="contact">
                 <p>
                   Russell Matney<br />
-                  Software and Fiction Engineer<br />
-                  <!-- russell.matney@gmail.com -->
+                  Software and Fiction Engineer
                 </p>
               </div>
               <div class="contact">
