--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
               <div class="contact">
                 <p>
                   Russell Matney<br />
-                  Software and Fiction Engineer
+                  Engineer @ <a href="http://www.moveline.com">Moveline</a>
                 </p>
               </div>
               <div class="contact">
