adds google fonts, fixes demos list

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,23 @@ a         { color: #00a; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
+
+/*****************************************************************************/
+/*
+/* Fonts
+/*
+/*****************************************************************************/
+/*
+font-family: 'Overlock SC', cursive;
+font-family: 'Fresca', sans-serif;
+font-family: 'Fauna One', serif;
+font-family: 'Economica', sans-serif;
+font-family: 'Cabin Condensed', sans-serif;
+font-family: 'Simonetta', cursive;
+font-family: 'Source Code Pro', sans-serif;
+font-family: 'Merriweather', serif;
+*/
+
 /*****************************************************************************/
 /*
 /* Home
