--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,9 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
+        <!-- Google Fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Overlock+SC|Fresca|Fauna+One|Economica:400,700|Merriweather' rel='stylesheet' type='text/css'>
+
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
