better nav via subheads

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,11 @@
           <div class="site">
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">software and fiction engineer</a>
+              {% if page.categories %}
+              <a class="extra" href="/{{page.categories}}.html">{{page.subhead}}</a>
+              {% else %}
+              <a class="extra" href="/">{{site.subhead}}</a>
+              {% endif %}
             </div>
 
                 {{ content }}
