--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,16 @@
         <!-- Google Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Economica:700|Squada+One|Pathway+Gothic+One|Merriweather' rel='stylesheet' type='text/css'>
 
+        <!-- Mail Chimp -->
+        <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+          #mc_embed_signup{
+            background:#fff;
+            font:14px Helvetica,Arial,sans-serif;
+            width:100px;
+          }
+        </style>
+
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
@@ -43,6 +53,20 @@
                   <a href="http://github.com/russmatney/">github.com/russmatney</a><br />
                   <a href="http://twitter.com/russmatney/">twitter.com/russmatney</a><br />
                 </p>
+              </div>
+              <div class="contact">
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                  <form action="http://russmatney.us7.list-manage1.com/subscribe/post?u=cbd910b262793d21e3e47be19&amp;id=649439ee83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <label for="mce-EMAIL"></label>
+                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="want email updates?" required>
+                    <div class="clear">
+                      <input type="submit" value="Subscribe!" name="subscribe" id="mc-embedded-subscribe" class="button">
+                    </div>
+                  </form>
+                </div>
+
+                <!--End mc_embed_signup-->
               </div>
             </div>
           </div>
