--- a/secret/project/views/main.html
+++ b/secret/project/views/main.html
@@ -17,24 +17,29 @@
 <br>
 
 <div class="row-fluid">
-  <div class="span3">
+  <div class="span4">
     <div class="well row-fluid" ng-repeat="customer in customers">
       
-      <input class="span12" type="text" ng-model="customer.name">
+      <input class="span6" type="text" ng-model="customer.name">
+      <input class="span6" type="number" ng-model="customer.price">
+
       {{customer.ccNum}}
-      <input class="span12" type="number" ng-model="customer.price">
+
+      <span class="span12"><strong>{{customer.price | currency}}</strong> at <strong>{{customer.percentage}}%</strong> of the total</span>
+
+      <button class="btn span12" ng-click="removeCustomer()">Remove Customer</button>
     
     </div>
-    <button ng-click="addCustomer()">Add Customer</button>
+    <button class="btn" ng-click="addCustomer()">Add Customer</button>
   </div>
 
-  <div class="span7 offset1">
+  <div class="span6 offset1">
     <div class="well row-fluid">
-      Group: <span ng-repeat="name in total.names"><span ng-show="$last"> and </span>{{name}}<span ng-show="!$last">, </span></span>
-      <br>
-      Group Credit Card Num: {{total.ccNum}}
-      <br>
-      Total: {{total.price | currency}}
+      <h3>
+        <span ng-repeat="name in total.names">{{name}}<span ng-show="!$last"> + </span></span>
+      </h3>
+      <h4 class="pull-right">Group Credit Card Num:<br>{{total.ccNum}}</h4>
+      <h4>Total: {{total.price | currency}}</h4>
     </div>
   </div>
 
