--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://code.angularjs.org/angular-1.0.1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 <script type="text/javascript" src="/js/jekyll-search-controller.js"></script>
 
 <script type="text/javascript">
