adds by-line with g+ link and author

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,3 +25,5 @@ subhead: back to category
   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 {{% endif %}}
+
+<p class="meta">posted by <a href="https://plus.google.com/104652964186882627849?rel=author">{{ site.author }}</a></p>
