removes byline, sneaks g+ link into footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Russell Matney<br />
+                  <a style="color:inherit;text-decoration:none;" href="https://plus.google.com/104652964186882627849?rel=author">{{ site.author }}</a><br />
                   Engineer @ <a href="http://www.moveline.com">Moveline</a>
                 </p>
               </div>
