styling for blockquotes from chris coyier. writes new post on brainy things

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/custom.css">
 
     </head>
     <body>
