removes 100-worders category. stickin wit tumblr

--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -23,7 +23,7 @@
 						<li class="logo"><a href="/">{{ site.title }}</a></li>
             <li><a href="/techsposure.html">techsposure</a></li>
             <li><a href="/getitwrite.html">get it write</a></li>
-            <li><a href="/100-worders.html">100-worders</a></li>
+            <!--<li><a href="/100-worders.html">100-worders</a></li>-->
             <li><a href="/resources.html">resources</a></li>
             <!--<li class="tag"><a href="/archive.html">archive</a></li>-->
             <!--<li class="page"><a href="/pages.html">pages</a></li>-->
