--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -49,9 +49,13 @@
 				<div class="misc vcard">
 					<h4>about</h4>
 					<ul>
-						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
+            <!-- <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li> -->
+            <li class="contact"><address><span class="author fn n">{{ site.author.name }}</span></address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
 						<li class="twitter"><a href="http://twitter.com/{{ site.author.twitter }}/" rel="me">twitter.com/{{ site.author.twitter }}</a></li>
+            <li class="tumblr"><a href="http://{{ site.author.tumblr }}.tumblr.com" rel="me">{{ site.author.tumblr }}.tumblr.com</a></li>
+            <li class="linkedin"><a href="http://www.linkedin.com/in/{{ site.author.linkedin }}" rel="me">linkedin.com/in/{{ site.author.linkedin }}</a></li>
+            <li class="about"><a href="{{ site.author.about }}"><span class="author fn n">About/Work</span></a></li>
 					</ul>
 				</div><!-- misc -->
 				<p class="licence">
