fix: set charset in HEAD
fixes font rendering in dev.

--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -2,6 +2,8 @@
 // Custom head component for hash-based URL redirects (Docsify -> Astro migration)
 ---
 
+<meta charset="utf-8" />
+
 <script is:inline>
   // Redirect old Docsify hash-based URLs to new Astro paths
   // Example: https://russmatney.com/#/devlogs/2025-06-10-dothop-speedrun
